<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HearingTestActivity">


    <LinearLayout
        android:id="@+id/hraeingTestRG1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioGroup
            android:id="@+id/rgFineStatus"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/rbFineOn"
                style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="fineOn"
                android:textColorLink="@color/colorPrimaryDark"
                tools:layout_editor_absoluteX="100dp"
                tools:layout_editor_absoluteY="75dp" />

            <RadioButton
                android:id="@+id/rbFineOff"
                style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="fineOff"
                android:textColorLink="@color/colorPrimaryDark"
                tools:layout_editor_absoluteX="55dp"
                tools:layout_editor_absoluteY="50dp" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/rgDirction"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <RadioButton
                android:id="@+id/rbDirLinks"
                style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="Links"
                android:textColorLink="@color/colorPrimaryDark"
                tools:layout_editor_absoluteX="55dp"
                tools:layout_editor_absoluteY="37dp" />

            <RadioButton
                android:id="@+id/rbDirRechts"
                style="@android:style/Widget.DeviceDefault.CompoundButton.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="Rechts"
                android:textColorLink="@color/colorPrimaryDark"
                tools:layout_editor_absoluteX="55dp"
                tools:layout_editor_absoluteY="50dp" />

        </RadioGroup>
    </LinearLayout>

    <Spinner
        android:id="@+id/freqSelector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hraeingTestRG1" />


    <me.tankery.lib.circularseekbar.CircularSeekBar
        android:id="@+id/seek_bar"
        android:layout_width="239dp"
        android:layout_height="222dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginTop="220dp"
        app:cs_max = "100"
        app.cs_progress = "25"
        app:cs_circle_progress_color = "@color/colorPrimary"
        app:cs_pointer_color = "@color/colorAccent"
        app:cs_circle_stroke_width="30dp"
        app:cs_circle_style="square"
        app:cs_negative_enabled="true"
        app:cs_pointer_angle="25"
        app:cs_pointer_stroke_width="48dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSeekBarValue"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="110dp"
        android:background="@android:color/holo_blue_bright"
        android:gravity="top"
        android:text="23.5 dB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/freqSelector" />

    <Button
        android:id="@+id/iHearedBtn"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:text="@string/iheard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSeekBarValue" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="220dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/voiceCtrlPhalf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/voiceControlPlusHalf" />

        <Button
            android:id="@+id/voiceCtrlP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/voiceControlPlus"
            android:textSize="24sp" />

        <Button
            android:id="@+id/voiceCtrlM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/voiceControlMinus"
            android:textSize="24sp" />
    </LinearLayout>

    <Button
        android:id="@+id/sendHearingTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="20dp"
        android:text="@string/sendHearingTest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seek_bar" />


</android.support.constraint.ConstraintLayout>